// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UIButton should render correctly 1`] = `
<button
  class="border-brand-600 text-white bg-brand-600 ring-brand-500 hover:bg-brand-700 hover:border-brand-700 shadow-sm border px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 2`] = `
<button
  class="border-brand-600 text-white bg-brand-600 ring-brand-500 hover:bg-brand-700 hover:border-brand-700 shadow-sm border px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 3`] = `
<button
  class="border-brand-600 text-white bg-brand-600 ring-brand-500 hover:bg-brand-700 hover:border-brand-700 shadow-sm border px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 4`] = `
<button
  class="border-brand-600 text-white bg-brand-600 ring-brand-500 hover:bg-brand-700 hover:border-brand-700 shadow-sm border px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 5`] = `
<button
  class="border-brand-600 text-white bg-brand-600 ring-brand-500 hover:bg-brand-700 hover:border-brand-700 shadow-sm border px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 6`] = `
<button
  class="border-brand-600 text-white bg-brand-600 ring-brand-500 hover:bg-brand-700 hover:border-brand-700 shadow-sm border px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 7`] = `
<button
  class="border-brand-600 text-white bg-brand-600 ring-brand-500 hover:bg-brand-700 hover:border-brand-700 shadow-sm border px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 8`] = `
<button
  class="text-brand-600 border-brand-600 disabled:bg-gray-200 ring-brand-400 hover:text-white hover:bg-brand-600 hover:border-brand-600 shadow-sm border focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 9`] = `
<button
  class="text-brand-600 border-brand-600 disabled:bg-gray-200 ring-brand-400 hover:text-white hover:bg-brand-600 hover:border-brand-600 shadow-sm border focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 10`] = `
<button
  class="text-brand-600 border-brand-600 disabled:bg-gray-200 ring-brand-400 hover:text-white hover:bg-brand-600 hover:border-brand-600 shadow-sm border focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 11`] = `
<button
  class="text-brand-600 border-brand-600 disabled:bg-gray-200 ring-brand-400 hover:text-white hover:bg-brand-600 hover:border-brand-600 shadow-sm border focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 12`] = `
<button
  class="text-brand-600 border-brand-600 disabled:bg-gray-200 ring-brand-400 hover:text-white hover:bg-brand-600 hover:border-brand-600 shadow-sm border focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 13`] = `
<button
  class="text-brand-600 border-brand-600 disabled:bg-gray-200 ring-brand-400 hover:text-white hover:bg-brand-600 hover:border-brand-600 shadow-sm border focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 14`] = `
<button
  class="text-brand-600 border-brand-600 disabled:bg-gray-200 ring-brand-400 hover:text-white hover:bg-brand-600 hover:border-brand-600 shadow-sm border focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 15`] = `
<button
  class="text-brand-600 ring-brand-300 hover:bg-brand-200 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 16`] = `
<button
  class="text-brand-600 ring-brand-300 hover:bg-brand-200 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 17`] = `
<button
  class="text-brand-600 ring-brand-300 hover:bg-brand-200 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 18`] = `
<button
  class="text-brand-600 ring-brand-300 hover:bg-brand-200 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 19`] = `
<button
  class="text-brand-600 ring-brand-300 hover:bg-brand-200 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 20`] = `
<button
  class="text-brand-600 ring-brand-300 hover:bg-brand-200 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 21`] = `
<button
  class="text-brand-600 ring-brand-300 hover:bg-brand-200 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;
